// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar renders SideBar correctly 1`] = `
<div
  className="sidebar-component"
>
  <div>
    <SmallIconButton
      className="button buttonOn undefined"
      icon="view headline"
      onClick={[Function]}
      style={Object {}}
    />
  </div>
  <div
    className="sidebar myClass sidebarOff smallOff"
    style={
      Object {
        "color": "blue",
      }
    }
  />
</div>
`;

exports[`SideBar renders SideBar with Items and secondary SideBar correctly 1`] = `
<div
  className="sidebar-component"
>
  <div>
    <SmallIconButton
      className="button buttonOn undefined"
      icon="view headline"
      onClick={[Function]}
      style={Object {}}
    />
  </div>
  <div
    className="sidebar myClass sidebarOff smallOff"
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <SidebarItem
      active={true}
      className="myClass"
      href="www.moosend.com"
      image="imagePath"
      key="0"
      label="Item"
      onClick={[Function]}
      style={
        Object {
          "color": "blue",
        }
      }
    />
    <SidebarItem
      active={false}
      activeSubMenu={false}
      className="myClass"
      href="www.moosend.com"
      image="imagePath"
      key="1"
      label="Item"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "blue",
        }
      }
    />
  </div>
  <SubMenu
    display={false}
    key=".1"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <SidebarItem
      active={false}
      className="myClass"
      href="www.moosend.com"
      label="Item"
      onClick={[Function]}
      style={
        Object {
          "color": "blue",
        }
      }
    />
  </SubMenu>
</div>
`;

exports[`SideBar renders SideBar with Items correctly 1`] = `
<SideBar
  button={true}
  className="myClass"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <div
    className="sidebar-component"
  >
    <div>
      <SmallIconButton
        className="button buttonOn undefined"
        icon="view headline"
        onClick={[Function]}
        style={Object {}}
      >
        <button
          className="button-icon-component
                         button
                         normalButton
                         
                         button buttonOn undefined"
          disabled={undefined}
          id={undefined}
          onClick={[Function]}
          style={Object {}}
        >
          <i
            className="material-icons icon"
          >
            view_headline
          </i>
        </button>
      </SmallIconButton>
    </div>
    <div
      className="sidebar myClass sidebarOff smallOff"
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <SidebarItem
        active={true}
        className="myClass"
        href="www.moosend.com"
        image="imagePath"
        imageOn={undefined}
        key="0"
        label="Item"
        onClick={[Function]}
        style={
          Object {
            "color": "blue",
          }
        }
      >
        <div
          className="item-component itemContainer myClass"
          onClick={[Function]}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          style={
            Object {
              "color": "blue",
            }
          }
        >
          <div
            className=" arrowImg"
          />
          <a
            className="anchor activeItem"
            href="www.moosend.com"
          >
            <img
              className="image"
              src="imagePath"
            />
            <span>
              Item
            </span>
          </a>
        </div>
      </SidebarItem>
      <SidebarItem
        active={false}
        className="myClass"
        href="www.moosend.com"
        image="imagePath"
        imageOn={undefined}
        key="1"
        label="Item"
        onClick={[Function]}
        style={
          Object {
            "color": "blue",
          }
        }
      >
        <div
          className="item-component itemContainer myClass"
          onClick={[Function]}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          style={
            Object {
              "color": "blue",
            }
          }
        >
          <div
            className=" arrowImg"
          />
          <a
            className="anchor "
            href="www.moosend.com"
          >
            <img
              className="image"
              src="imagePath"
            />
            <span>
              Item
            </span>
          </a>
        </div>
      </SidebarItem>
    </div>
  </div>
</SideBar>
`;

exports[`SideBar renders SidebarItem correctly 1`] = `
<div
  className="item-component itemContainer myClass"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  <div
    className=" arrowImg"
  />
  <a
    className="anchor activeItem"
    href="www.moosend.com"
  >
    <img
      className="image"
      src="imageOnPath"
    />
    <span>
      Item
    </span>
  </a>
</div>
`;
